package app.purecipes.feature.auth.ui.registration

internal const val REGISTRATION_SCREEN_TITLE_TAG = "registrationScreenTitle"
internal const val REGISTRATION_EMAIL_FIELD_TAG = "registrationEmailField"
internal const val REGISTRATION_EMAIL_ERROR_TAG = "registrationEmailError"
internal const val REGISTRATION_PASSWORD_FIELD_TAG = "registrationPasswordField"
internal const val REGISTRATION_PASSWORD_ERROR_TAG = "registrationPasswordError"
internal const val REGISTRATION_PASSWORD_POLICY_SUPPORTING_TEXT_TAG = "registrationPasswordPolicySupportingText"
internal const val REGISTRATION_CONFIRM_PASSWORD_FIELD_TAG = "registrationConfirmPasswordField"
internal const val REGISTRATION_CONFIRM_PASSWORD_ERROR_TAG = "registrationConfirmPasswordError"
internal const val REGISTRATION_SUBMIT_TAG = "registrationSubmit"
