package app.purecipes.feature.auth.ui.authentication

internal const val AUTH_SCREEN_TITLE_TAG = "authScreenTitle"
internal const val AUTH_ERROR_MESSAGE_TAG = "authErrorMessage"
internal const val AUTH_SIGN_IN_WITH_EMAIL_TAG = "authSignInWithEmail"
internal const val AUTH_CREATE_ACCOUNT_WITH_EMAIL_TAG = "authCreateAccountWithEmail"
