package app.purecipes.feature.auth.ui.profile

internal const val DELETE_ACCOUNT_BUTTON_TAG = "deleteAccountButton"
internal const val DELETE_ACCOUNT_DIALOG_TAG = "deleteAccountDialog"
